changed display in social list item in  footer

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -45,11 +45,16 @@
     }
 
     &__list--social {
+      display: flex;
       flex-grow: 0;
     }
 
     &__list-item {
       margin: 0;
+    }
+
+    &__list-item--social {
+      margin-left: 1em;
     }
 
     &__link,
