--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -10,14 +10,14 @@
   &::before {
     content: '';
     background: url(../images/bg-header-mobile.png);
-    background-size: 100%;
+    background-size: 100vw;
     background-repeat: no-repeat;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    height: 50%;
+    height: 100vh;
   }
 }
 
